Fix potential for text wrapping in sidebar nav button tooltips.

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -112,4 +112,5 @@ body {
     font-size: 12px;
     font-family: 'segoe ui', 'ms sans serif', sans-serif;
     box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+    white-space: nowrap;
 }
